# indgram

./: .gitignore  README.md  README_nanumkorea.md  agents.md  check_progress.js  clean_ksic.py  deep_search_html.py  diagnose_rag.py  find_격하.py  main.py  pyproject.toml  settings.json  tempSettings.md  test_refined_loader.py
.cursor/: mcp.json
KSIC/: README_induty_scripts.md  add_induty_name_complete_levels.py
corp_code_extractor/: CHANGELOG.md  FINAL_SUMMARY.md  all_companies.py  all_companies_v2.py  corp_code.ipynb  corp_list.py  stock_code.py
corp_list_detail_extractor/: 1_corp_list.py  2_corp_list_detail.py  3_add_induty_name_complete_levels.py
dart_downloader/: dart_fss.ipynb  get_doc.py  opendartreader copy.ipynb  opendartreader.ipynb  opendartreader_dataframe.ipynb  opendartreader_html.ipynb
docs/: dart_api.rst  dart_auth.rst  dart_corp.rst  dart_errors.rst  dart_fs.rst  dart_request.rst  dart_search.rst  dart_types.rst  dart_xbrl.rst  drawing.md  index.rst  license.rst  openDartReader_manual.md  openDartReader_user_guide.md  requirements.txt  welcome.rst
exaone/: API_Example.py
file_search_api/: app.py  drive_service.py  gemini_service.py  html_extractor_v6.py  html_extractor_v7.py
langchain/: 2. 체인(chain)에 대한 이해.ipynb  3. 프롬프트(prompt) 만들기.ipynb  4. LLM 모델 구조.ipynb  5. LLM 모델 GEMINI.ipynb  5. LLM 모델 튜닝.ipynb  6. RAG 기법 이해_chatgpt.ipynb  6. RAG 기법 이해_gemini.ipynb
management_stock/: collect_market_tickers.py  collect_warning_history.py  filter_penny_stock_candidates.py  filter_warning_candidates.py  market_cap.ipynb  market_snapshot.py
mermaid/: k_partners_chart.md  케이파트너스.md  케이파트너스.mmd
non_profit_organization/: nanumkorea_scraper.js
notebook/: corp_load.ipynb  opendartreader.ipynb
palntir/: .gitignore  MANUAL_DOWNLOAD.md  README.md  STATUS.md  download.py  example_usage.py
request/: README.md  valuation_cli.py
tokenizer/: README.md  compressor.py  example_usage.py  token_counter.py  unifier.py
utilities/: compressor.py  search_company.ipynb
zombie/: __init__.py  collect_market_tickers.py  common_io.py  dart_fetcher.py  dart_fss_probe.py  (+9 more)
(+102 files in other folders)
