[project]
name = "indgram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dart-fss>=0.4.14",
    "foundry-dev-tools>=2.0.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "opendartreader>=0.2.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
